test(loan): implement 409 scenarios for conflicting book licenses
-Added parameterized tests in LoanControllerIT covering cases where licenses are already occupied by active loans or in a mixed state (inactive and occupied).

Technical changes:

-Centralized BookLicense builders within BookFactory to optimize resource reuse.
-Created LoanConflictScenario enum for error mapping of 409 status codes.
-Expanded LoanIntegrationFactory to support persistence setups for conflicting states.
-Standardized BusinessException messages to include Resource IDs for improved traceability.
-Updated LoanService e LoanService unit tests to reflect the new message pattern to conflict.
-Migrated @MethodSource providers to LoanControllerIT for Spring Boot context compatibility.